--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="enter_dog_age_here">Enter dog age here</string>
     <string name="logout">Log out</string>
     <string name="homepage">Home</string>
+    <string name="pat">Send Pat!</string>
 </resources>
